# django-react-todo

backend/: .gitignore  manage.py  pyproject.toml
backend/django_react_todo/: asgi.py  models.py  serializers.py  settings.py  urls.py  wsgi.py
backend/django_react_todo/migrations/: 0001_initial.py
backend/django_react_todo/views/: auth.py  todos.py
